fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ main {
     max-width: 1200px;
     margin: 0 auto;
     box-sizing: border-box;
-    padding-top: 185px;
+    padding-top: 220px;
 }
 
 header {
